--- a/frontend/src/app/footer/footer.component.html
+++ b/frontend/src/app/footer/footer.component.html
@@ -1,3 +1,12 @@
-<p class="footer-main">
-    Contact our webmaster via Telegram <a href="https://t.me/Veetaha" target="_blank">@Veetaha</a>.
+<p class="footer-root">
+    Contact the leading webmaster
+    <a mat-stroked-button href="https://t.me/Veetaha" target="_blank">
+        via Telegram
+        <img src="/assets/telegram-logo.png" class="external-site-logo">
+    </a> 
+    or 
+    <a mat-stroked-button href="https://github.com/veetaha">
+        via GitHub
+        <img src="/assets/github-logo.svg" class="external-site-logo"/>
+    </a>
 </p>
