--- a/frontend/src/app/navigation-drawer/navigation-drawer.component.html
+++ b/frontend/src/app/navigation-drawer/navigation-drawer.component.html
@@ -1,6 +1,7 @@
-&lt;NAVIGATION DRAWER&gt;
 <mat-nav-list>
-    <a mat-list-item>
-        <mat-icon>home</mat-icon>Home
+    <a routerLink="/" mat-list-item>
+        <mat-icon>Home</mat-icon>
     </a>
+   <h1 matSubheader>Developer</h1>
+    
 </mat-nav-list>
