--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -2,11 +2,15 @@
     height: 100%;
     width: 100%;
 }
-
+.content-root {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
 .main {
     margin: auto;
     width: 80%;
 }
-
-// .dashboard {
-// }
+.footer {
+    flex-shrink: 0;
+}
