--- a/frontend/src/app/common/snack-bar/snack-bar.component.html
+++ b/frontend/src/app/common/snack-bar/snack-bar.component.html
@@ -1,12 +1,20 @@
+<td-message 
+    [icon]="{
+        info:    'info',
+        success: 'done',
+        warning: 'warning',
+        error:   'error'
+    }[data.severity]"
+    [label]="data.title"
+    [sublabel]="data.body"
+>
+
+</td-message>
+<!-- 
 <h1 class="mat-title">
     <mat-icon>{{
-        {
-            info:    'info',
-            success: 'done',
-            warning: 'warning',
-            error:   'error'
-        }[data.severity]
+        
     }}</mat-icon>
     {{data.title}}
 </h1>
-<p class="mat-body-1">{{data.body}}</p>
+<p class="mat-body-1">{{data.body}}</p> -->
