--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -20,7 +20,7 @@
         
     </ng-container>
     <ng-template #elseForNotGuest>
-        <a mat-button flex (click)="signOut()">Sign out</a>
+        <a mat-button flex (click)="trySignOut()">Sign out</a>
     </ng-template>
 
 </nav>
