--- a/frontend/src/app/developer/developer/developer.component.html
+++ b/frontend/src/app/developer/developer/developer.component.html
@@ -47,7 +47,7 @@
                     click here in order to copy your auth token to clipboard
                 </button>
             </span>
-            and set the *HTTP* headers in the lower panel.
+            and set the <code>HTTP</code> headers in the lower panel.
         </p>
         
 <pre><code>{{'{'}}
