--- a/frontend/src/app/navigation-drawer/navigation-drawer.component.html
+++ b/frontend/src/app/navigation-drawer/navigation-drawer.component.html
@@ -4,6 +4,12 @@
         Home
     </a>
 
+    <a routerLink="/users" mat-list-item>
+        <mat-icon>supervised_user_circle</mat-icon>
+        Users
+    </a>
+
+
     <mat-expansion-panel>
         <mat-expansion-panel-header>
             <mat-panel-title>
