--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,13 +3,7 @@
 
 <td-layout>
 
-    <td-navigation-drawer 
-        flex 
-        sidenavTitle="ts-nestjs-angular-template" 
-        logo="teradata-dark" 
-        name="Vitaly Kryvenko" 
-        email="email@gmail.com"
-    >
+    <td-navigation-drawer flex sidenavTitle="ts-nestjs-angular-template">
         <app-navigation-drawer></app-navigation-drawer>
     </td-navigation-drawer>
 
