--- a/frontend/src/app/navigation-drawer/navigation-drawer.component.html
+++ b/frontend/src/app/navigation-drawer/navigation-drawer.component.html
@@ -1,10 +1,10 @@
 <mat-nav-list>
-    <a routerLink="/" mat-list-item>
+    <a routerLink="/" mat-list-item tdLayoutToggle>
         <mat-icon>home</mat-icon>
         Home
     </a>
 
-    <a routerLink="/users" mat-list-item>
+    <a routerLink="/users" mat-list-item tdLayoutToggle>
         <mat-icon>supervised_user_circle</mat-icon>
         Users
     </a>
@@ -14,12 +14,12 @@
         <mat-expansion-panel-header>
             <mat-panel-title>
                 <mat-icon>code</mat-icon> 
-                <div class="expnasion-panel-title">Developer</div>
+                Developer
             </mat-panel-title>
         </mat-expansion-panel-header>
 
         <mat-nav-list>
-            <a mat-list-item href="/gql" target="_blank" >
+            <a mat-list-item href="/gql" target="_blank">
                 <mat-icon>play_circle_outline</mat-icon>
                 GraphQL playground
             </a>
