--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
 
 
     <app-dashboard-anchor flex routePath="/" class="dashboard-home-btn" exactMatch>
-        <span class="dashboard-home-btn__text">Tnat</span>
+        <span class="dashboard-home-btn__text">Tac</span>
     </app-dashboard-anchor>
 
     <app-dashboard-anchor flex routePath="/developer">Documentation</app-dashboard-anchor>
