--- a/frontend/src/app/developer/developer/developer.component.html
+++ b/frontend/src/app/developer/developer/developer.component.html
@@ -14,7 +14,7 @@
         >
     </figure>
     <mat-card-content> 
-        <p>Welcome to <strong>ts-nestjs-angular-template</strong> backend API documentation.</p>
+        <p>Welcome to <strong>Times are Changing</strong> backend API documentation.</p>
 
         <p>
             All interaction with the web-server is done via <code>GraphQL</code> query
