--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,8 +1,8 @@
-<h1>ts-nestjs-angular-template</h1>
+<h1>Times are Changing</h1>
 <figure>
     <img 
-        src="/assets/vee-logo.png" 
-        alt="ts-nestjs-angular-template website logo"
+        src="/assets/website-logo.png" 
+        alt="'Times are Changing' website logo"
         class="website-logo"
     />
 </figure>
