migrating to Angular 8

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -8,8 +8,8 @@
     height: 100%;
 }
 .main {
-    margin: auto;
-    width: 80%;
+    padding: 10%;
+    flex-grow: 1;
 }
 .footer {
     flex-shrink: 0;
