--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,8 +1,22 @@
-<h1>Times are Changing</h1>
-<figure>
-    <img 
-        src="/assets/website-logo.png" 
-        alt="'Times are Changing' website logo"
-        class="website-logo"
-    />
-</figure>
+<mat-card>
+    <mat-card-header>
+        <mat-card-title>Times are Changing</mat-card-title>
+        <mat-card-subtitle>Pony game</mat-card-subtitle>
+    </mat-card-header>
+    <figure mat-card-image class="home-promo">
+        <img 
+            src="/assets/main-background.jpg" 
+            alt="'Times are Changing' screenshot"
+            class="home-promo__image"
+        >
+    </figure>
+    <mat-card-content>
+        <figure>
+            <img 
+                src="/assets/website-logo.jpg" 
+                alt="'Times are Changing' website logo"
+                class="website-logo"
+            />
+        </figure>
+    </mat-card-content>
+</mat-card>
