--- a/frontend/src/app/auth/sign-in/sign-in.component.html
+++ b/frontend/src/app/auth/sign-in/sign-in.component.html
@@ -1,4 +1,5 @@
 <ng-container *veeLet="isFetchingClient$ | async as isFetchingClient">
+<mat-card>
 
 <form
     [formGroup]="form"
@@ -34,4 +35,5 @@
     >Sign in</button>
 </form>
 
+</mat-card>
 </ng-container>
