--- a/frontend/src/app/footer/footer.component.scss
+++ b/frontend/src/app/footer/footer.component.scss
@@ -3,7 +3,7 @@
 .footer-root {
     background-color: map-get($theme, footer-bgnd);
     color: white;
-    margin: 10px 0 0 0;
+    margin: 0;
     text-align: center;
     padding: 20px;
 }
