first heroku try

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -3,20 +3,14 @@
         <mat-card-title>Times are Changing</mat-card-title>
         <mat-card-subtitle>Pony game</mat-card-subtitle>
     </mat-card-header>
-    <figure mat-card-image class="home-promo">
-        <img 
-            src="/assets/main-background.jpg" 
-            alt="'Times are Changing' screenshot"
-            class="home-promo__image"
-        >
-    </figure>
     <mat-card-content>
-        <figure>
-            <img 
-                src="/assets/website-logo.jpg" 
-                alt="'Times are Changing' website logo"
-                class="website-logo"
-            />
-        </figure>
+    <figure>
+        <img 
+            src="/assets/website-logo.jpg" 
+            alt="'Times are Changing' website logo"
+            class="website-logo"
+        />
+    </figure>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/8hfaEUNbtA0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </mat-card-content>
 </mat-card>
