--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -4,9 +4,10 @@
 
 
     <app-dashboard-anchor flex routePath="/" class="dashboard-home-btn" exactMatch>
-        <span class="dashboard-home-btn__text">Tac</span>
+        <span class="dashboard-home-btn__text">TaC</span>
     </app-dashboard-anchor>
 
+    <app-dashboard-anchor flex routePath="/media">Media</app-dashboard-anchor>
     <app-dashboard-anchor flex routePath="/developer">Documentation</app-dashboard-anchor>
 
     <ng-container *appIfClientRole="authRouteMap.getRoleLimitFor('sign-in'); else elseForNotGuest">
