Set dark theme, added news deletion button, removed mdb-bootstrap dependency, added images interaction

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -21,6 +21,7 @@
             value="0"
         ></mat-progress-bar>
         <div class="local-content-root">
+            <app-fab class="local-fab"></app-fab>
             <main class="local-main">
                 <router-outlet></router-outlet>
             </main>
