--- a/frontend/src/app/common/snack-bar/snack-bar.component.html
+++ b/frontend/src/app/common/snack-bar/snack-bar.component.html
@@ -11,7 +11,7 @@
     <button mat-icon-button
         td-message-actions  
         (click)="closeSnackBar()"
-        class="snack-bar__close-btn"
+        class="local-close-btn"
     >
         <mat-icon>cancel</mat-icon>
     </button>
