--- a/frontend/src/app/media/media-pictures/media-pictures.component.html
+++ b/frontend/src/app/media/media-pictures/media-pictures.component.html
@@ -1,7 +1,9 @@
-<mdb-carousel animation="slide">
-    <mdb-carousel-item *ngFor="let imageSrc of screenshotSrcs">
+&lt;app-media-pictures&gt; is under development
+
+<!-- <ui-carousel [infinite]="true">
+    <ui-carousel-item *ngFor="let imageSrc of screenshotSrcs">
         <figure class="local-carousel-item">
             <img [src]="imageSrc" class="local-carousel-item__payload" >
         </figure>
-    </mdb-carousel-item>
-</mdb-carousel>
+    </ui-carousel-item>
+</ui-carousel> -->
