--- a/frontend/src/app/media/media-videos/media-videos.component.html
+++ b/frontend/src/app/media/media-videos/media-videos.component.html
@@ -1,5 +1,6 @@
-<mdb-carousel [interval]="0" animation="slide">
-    <mdb-carousel-item *ngFor="let ytVideoSrc of ytVideoSrcs">
+&lt;app-media-videos&gt; is under development
+<!-- <mat-carousel [interval]="0" animation="slide">
+    <mat-carousel-slide *ngFor="let ytVideoSrc of ytVideoSrcs">
         <div class="local-carousel-item">
             <iframe 
                 [src]="ytVideoSrc" 
@@ -9,5 +10,5 @@
                 allowfullscreen
             ></iframe>
         </div>
-    </mdb-carousel-item>
-</mdb-carousel>
+    </mat-carousel-slide>
+</mat-carousel> -->
