--- a/frontend/src/app/user/all-users/all-users.component.scss
+++ b/frontend/src/app/user/all-users/all-users.component.scss
@@ -1,8 +1,12 @@
-@import 'theme.scss';
+@import 'variables';
 
-.user-role {
-    font-size: 0.7em;
-}
-.user-creation-date {
-    color: map-get($theme, muted-text)
+.local {
+    
+    &-user-role {
+        font-size: 0.7em;
+    }
+
+    &-user-creation-date {
+        color: map-get($theme, muted-text)
+    }
 }
