--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -1,30 +1,9 @@
-@import '~@angular/material/theming';
+@import 'variables';
 @import '~@covalent/core/theming/all-theme';
 @import '~@covalent/markdown/markdown-theme';
 @import '~@covalent/highlight/highlight-theme';
 
-$typography: mat-typography-config(
-    $font-family: 'Roboto, monospace',
-    $headline: mat-typography-level(32px, 48px, 700),
-    $body-1: mat-typography-level(16px, 24px, 500)
-);
-
 @include mat-core($typography); // $typography is an **optional** argument for the mat-core
-
-$primary: mat-palette($mat-blue);
-$accent:  mat-palette($mat-orange);
-$warn:    mat-palette($mat-red);
-
-
-// Create the theme object (a Sass map containing all of the palettes).
-$theme: map-merge(mat-light-theme($primary, $accent, $warn), (
-    snack-bar-info:    mat-color($mat-blue, 700), // second argument is required!
-    snack-bar-success: mat-color($mat-green, 500),
-    snack-bar-warning: mat-color($mat-yellow, 500),
-    snack-bar-error:   mat-color($mat-red, 500),
-    footer-bgnd:       mat-color($primary),
-    muted-text:        mat-color($mat-grey, 700)
-));
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
