--- a/frontend/src/app/common/snack-bar/snack-bar.component.scss
+++ b/frontend/src/app/common/snack-bar/snack-bar.component.scss
@@ -1,6 +1,4 @@
-.snack-bar {
-    &__close-btn {
-        margin-top: -40px;
-        margin-right: -30px;
-    }
+.local-close-btn {
+    margin-top:   -40px;
+    margin-right: -30px;
 }
