--- a/frontend/src/app/news/create-news/create-news.component.html
+++ b/frontend/src/app/news/create-news/create-news.component.html
@@ -1,9 +1,11 @@
+<mat-card>
+<mat-card-content>
 <form
     [formGroup]="form"
     (ngSubmit)="submitForm()"
-    class="form"
+    class="local-form"
 >
-    <mat-form-field appearance="outline">
+    <mat-form-field appearance="outline" class="local-form__control">
         <mat-label>Title</mat-label>
         <input matInput
             required
@@ -14,10 +16,35 @@
         />
     </mat-form-field>
     
-    <td-text-editor formControlName="body"></td-text-editor>
+    <app-upload-image 
+        buttonLabel="Upload promo image" 
+        formControlName="promoImgId"     
+    ></app-upload-image>
+    <figure *ngIf="form.value.promoImgId != null" 
+        class="local-promo local-form__control"
+    >
+        <img 
+            [src]="images.getImgUrlFromId(form.value.promoImgId)" 
+            class="local-promo__img"
+            alt="Prewview loaded image"
+        />
+    </figure>
+    
+    <td-text-editor 
+        formControlName="body" 
+        class="local-body-editor local-form__control"
+    ></td-text-editor>
+    
     <button mat-raised-button
         [disabled]="form.invalid"
+        class="local-form__control"
         type="submit"
         color="primary"
-    >Submit</button>
+    > Submit
+    </button>
+
+
+    
 </form>
+</mat-card-content>
+</mat-card>
