--- a/frontend/src/app/news/news-comment/all-news-comments/all-news-comments.component.html
+++ b/frontend/src/app/news/news-comment/all-news-comments/all-news-comments.component.html
@@ -5,6 +5,12 @@
 >
 <section *appPageBody="let newsComments" class="local-comment-section">
     <h1 class="local-comment-section__heading">Comments</h1>
+    <app-create-news-comment
+        [newsId]="newsId"
+        (createdComment)="refetchNewsCommentsPage()"
+    > 
+    </app-create-news-comment>
+
     <app-paged-news-comment *ngFor="let comment of newsComments; trackBy: trackById"
         [comment]="comment"
         (deleteComment)="deleteNewsComment(comment.id)"
