--- a/frontend/src/app/news/news-comment/create-news-comment/create-news-comment.component.scss
+++ b/frontend/src/app/news/news-comment/create-news-comment/create-news-comment.component.scss
@@ -1,3 +1,15 @@
-// .local {
-  
-// }
+.local {
+    &-form {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+
+        &__editor {
+            width: 100%;
+        }
+
+        &__control {
+            margin-top: 15px;
+        }
+    }
+}
